<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <View
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:background="@color/ocean_deeper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estatisticas_title"
        android:textAppearance="@style/TextAppearance.Preamar.Display"
        android:textSize="26sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="@id/top_bar" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:alpha="0.9"
        android:contentDescription="@string/cd_dotted_turtle"
        android:src="@drawable/ic_turtle_dotted"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/estatisticas_empty"
        android:textAppearance="@style/TextAppearance.Preamar.Body"
        android:textColor="@color/text_muted"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.68" />

</androidx.constraintlayout.widget.ConstraintLayout>
